--- a/src/MudBlazor/Styles/components/_input.scss
+++ b/src/MudBlazor/Styles/components/_input.scss
@@ -365,11 +365,14 @@
     }
 
     &.mud-input-root-filled {
-      margin: 27px 12px 10px;
+      box-sizing: border-box;
+      margin-top: 0;
+      margin-bottom: 0;
+      padding: 27px 12px 10px;
 
       &.mud-input-root-margin-dense {
-        margin-top: 23px;
-        margin-bottom: 6px;
+        padding-top: 23px;
+        padding-bottom: 6px;
       }
 
       &:-webkit-autofill {
@@ -378,12 +381,12 @@
       }
 
       &.mud-input-root-hidden-label {
-        margin-top: 18px;
-        margin-bottom: 19px;
+        padding-top: 18px;
+        padding-bottom: 19px;
 
         &.mud-input-root-margin-dense {
-          margin-top: 10px;
-          margin-bottom: 11px;
+          padding-top: 10px;
+          padding-bottom: 11px;
         }
       }
 
