--- a/src/MudBlazor.UnitTests.Viewer/TestComponents/TextField/TextFieldAutoGrowTest.razor
+++ b/src/MudBlazor.UnitTests.Viewer/TestComponents/TextField/TextFieldAutoGrowTest.razor
@@ -20,20 +20,20 @@
 
 <div Style="margin-top:50px">
     Outlined without AutoGrow
-    <MudTextField T="string" Label="example" Variant="Variant.Filled"/>
+    <MudTextField T="string" Label="example" Variant="Variant.Outlined"/>
 </div>
 
 <div Style="margin-top:50px">
     Outlined with AutoGrow
-    <MudTextField T="string" Label="example" Variant="Variant.Filled" AutoGrow/>
+    <MudTextField T="string" Label="example" Variant="Variant.Outlined" AutoGrow/>
 </div>
 
 <div Style="margin-top:50px">
     Outlined , Dense without AutoGrow
-    <MudTextField T="string" Label="example" Margin="Margin.Dense" Variant="Variant.Filled"/>
+    <MudTextField T="string" Label="example" Margin="Margin.Dense" Variant="Variant.Outlined"/>
 </div>
 
 <div Style="margin-top:50px">
     Outlined , Dense with AutoGrow
-    <MudTextField T="string" Label="example" Margin="Margin.Dense" Variant="Variant.Filled" AutoGrow/>
+    <MudTextField T="string" Label="example" Margin="Margin.Dense" Variant="Variant.Outlined" AutoGrow/>
 </div>
