--- a/src/MudBlazor.UnitTests.Viewer/TestComponents/TextField/TextFieldAutoGrowTest.razor
+++ b/src/MudBlazor.UnitTests.Viewer/TestComponents/TextField/TextFieldAutoGrowTest.razor
@@ -19,6 +19,11 @@
 </div>
 
 <div Style="margin-top:50px">
+    AutoGrow with MaxLines test
+    <MudTextField T="string" MaxLines="5" Label="example" Variant="Variant.Filled" AutoGrow/>
+</div>
+
+<div Style="margin-top:50px">
     Outlined without AutoGrow
     <MudTextField T="string" Label="example" Variant="Variant.Outlined"/>
 </div>
