--- a/src/MudBlazor/Components/Input/MudRangeInput.razor
+++ b/src/MudBlazor/Components/Input/MudRangeInput.razor
@@ -84,11 +84,6 @@
 
     @if (Variant == Variant.Outlined)
     {
-        <fieldset class="mud-input-outlined-border">
-            @if(!string.IsNullOrEmpty(Label))
-            {
-                <legend>@Label</legend>
-            }
-        </fieldset>
+        <div class="mud-input-outlined-border"></div>
     }
 </div>
